@@ -11,11 +11,11 @@ import uk.gov.hmcts.reform.prl.models.complextypes.ChildrenAndOtherPeopleRelatio
 import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 import uk.gov.hmcts.reform.prl.models.tasklist.TaskState;
 import uk.gov.hmcts.reform.prl.services.TaskErrorService;
+import uk.gov.hmcts.reform.prl.services.validators.eventschecker.EventsChecker;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.CHILDREN_AND_OTHER_PEOPLE_IN_THIS_APPLICATION;
@@ -46,7 +46,7 @@ public class ChildrenAndOtherPeopleInThisApplicationChecker implements EventChec
             List<ChildrenAndOtherPeopleRelation> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
             for (ChildrenAndOtherPeopleRelation c : children) {
                 log.debug("ChildrenAndOtherPeopleInThisApplicationChecker - "
                               + "validateMandatoryFieldsCompleted :{} ",validateMandatoryFieldsCompleted(c));
